# cpp_experiments

./: .gitignore  README.md  cmakelists.txt  todo
modules/_template_/: cmakelists.txt
modules/_template_/src/: test.cpp
modules/boost/spirit/: cmakelists.txt
modules/boost/spirit/src/: main.cpp  test.cpp
modules/helloworld/: cmakelists.txt
modules/patterns/pimpl/: cmakelists.txt
modules/patterns/pimpl/src/: interface.cpp  test.cpp
modules/patterns/range/: CMakeLists.txt  cmakelists.txt
modules/patterns/range/inc/: range.h  range.hpp
modules/patterns/range/src/: test.cpp
modules/patterns/scheduler/: CMakeLists.txt  cmakelists.txt
modules/patterns/scheduler/inc/: scheduler.hpp
modules/patterns/scheduler/src/: proto.txt  scheduler.cpp  test.cpp
modules/patterns/tree/: cmakelists.txt
modules/patterns/tree/inc/: tree.h
modules/patterns/tree/src/: test.cpp
modules/pimpl/: cmakelists.txt
modules/pimpl/inc/: interface.hpp
modules/pimpl/src/: interface.cpp  main.cpp
modules/playground/: cmakelists.txt
modules/playground/src/: test.cpp
modules/practice/per_day/: CMakeLists.txt  cmakelists.txt
modules/practice/per_day/src/: test.cpp
modules/sol/: CMakeLists.txt  cmakelists.txt
modules/sol/src/: test.cpp
scripts/libclang/try/: try.py
